--- a/dev-cpp/libxmlpp/ChangeLog
+++ b/dev-cpp/libxmlpp/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-cpp/libxmlpp
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-cpp/cvs-repo/gentoo-x86/dev-cpp/libxmlpp/ChangeLog,v 1.72 2008/05/20 01:19:43 jer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-cpp/cvs-repo/gentoo-x86/dev-cpp/libxmlpp/ChangeLog,v 1.73 2008/05/20 18:40:09 corsair Exp $
+
+  20 May 2008; Markus Rothe <corsair@gentoo.org> libxmlpp-2.22.0.ebuild:
+  Stable on ppc64; bug #222749
 
   20 May 2008; Jeroen Roovers <jer@gentoo.org> libxmlpp-2.22.0.ebuild:
   Stable for HPPA (bug #222749).
