--- a/net-libs/courier-authlib/ChangeLog
+++ b/net-libs/courier-authlib/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-libs/courier-authlib
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-libs/cvs-repo/gentoo-x86/net-libs/courier-authlib/ChangeLog,v 1.73 2008/05/20 10:20:50 hanno Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-libs/cvs-repo/gentoo-x86/net-libs/courier-authlib/ChangeLog,v 1.74 2008/05/20 22:55:21 jer Exp $
+
+  20 May 2008; Jeroen Roovers <jer@gentoo.org>
+  courier-authlib-0.60.2-r1.ebuild:
+  Stable for HPPA (bug #222737).
 
 *courier-authlib-0.60.2-r1 (20 May 2008)
 
