--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,10 +1,13 @@
 # ChangeLog for profile directory
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/profiles/cvs-repo/gentoo-x86/profiles/ChangeLog,v 1.1439 2008/05/20 23:53:10 drac Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/profiles/cvs-repo/gentoo-x86/profiles/ChangeLog,v 1.1440 2008/05/21 00:15:30 jer Exp $
 #
 # This ChangeLog should include records for all changes in profiles directory.
 # Only typo fixes which don't affect portage/repoman behaviour could be avoided
 # here. If doubt put a record here!
+
+  21 May 2008; Jeroen Roovers <jer@gentoo.org> package.mask:
+  =www-client/opera-9.50_beta2_pre* left the tree.
 
   21 May 2008; Samuli Suominen <drac@gentoo.org> use.local.desc,
   package.mask:
