--- a/media-libs/libprojectm-qt/ChangeLog
+++ b/media-libs/libprojectm-qt/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/libprojectm-qt
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/libprojectm-qt/ChangeLog,v 1.1 2008/05/20 14:27:13 drac Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/libprojectm-qt/ChangeLog,v 1.2 2008/05/21 10:57:32 aballier Exp $
+
+  21 May 2008; Alexis Ballier <aballier@gentoo.org>
+  libprojectm-qt-1.1_p3.ebuild:
+  add inherit eutils for built_with_use, thanks to xhub for reporting on irc
 
 *libprojectm-qt-1.1_p3 (20 May 2008)
 
