--- a/dev-perl/extutils-depends/ChangeLog
+++ b/dev-perl/extutils-depends/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/extutils-depends
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/extutils-depends/ChangeLog,v 1.25 2008/04/08 09:25:26 tove Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/extutils-depends/ChangeLog,v 1.26 2008/05/21 12:38:32 fmccor Exp $
+
+  21 May 2008; Ferris McCormick <fmccor@gentoo.org>
+  extutils-depends-0.300.ebuild:
+  Sparc stable, required for Bug #204386.
 
 *extutils-depends-0.300 (07 Apr 2008)
 
