--- a/media-libs/portaudio/ChangeLog
+++ b/media-libs/portaudio/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/portaudio
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/portaudio/ChangeLog,v 1.50 2008/05/20 09:22:41 drac Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/portaudio/ChangeLog,v 1.51 2008/05/21 13:18:36 fmccor Exp $
+
+  21 May 2008; Ferris McCormick <fmccor@gentoo.org>
+  portaudio-19_pre20071207.ebuild:
+  Add ~sparc in preparation for Bug #223015.
 
   20 May 2008; Samuli Suominen <drac@gentoo.org>
   portaudio-19_pre20071207.ebuild:
