--- a/net-firewall/shorewall-perl/ChangeLog
+++ b/net-firewall/shorewall-perl/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-firewall/shorewall-perl
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-firewall/cvs-repo/gentoo-x86/net-firewall/shorewall-perl/Attic/ChangeLog,v 1.15 2008/05/04 13:07:28 pva Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-firewall/cvs-repo/gentoo-x86/net-firewall/shorewall-perl/Attic/ChangeLog,v 1.16 2008/05/21 18:04:54 jokey Exp $
+
+*shorewall-perl-4.0.11 (21 May 2008)
+
+  21 May 2008; Markus Ullmann <jokey@gentoo.org>
+  +shorewall-perl-4.0.11.ebuild:
+  Version bump
 
 *shorewall-perl-4.0.10.1 (04 May 2008)
 
