--- a/net-firewall/shorewall-shell/ChangeLog
+++ b/net-firewall/shorewall-shell/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-firewall/shorewall-shell
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-firewall/cvs-repo/gentoo-x86/net-firewall/shorewall-shell/Attic/ChangeLog,v 1.13 2008/05/04 13:10:12 pva Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-firewall/cvs-repo/gentoo-x86/net-firewall/shorewall-shell/Attic/ChangeLog,v 1.14 2008/05/21 18:05:25 jokey Exp $
+
+*shorewall-shell-4.0.11 (21 May 2008)
+
+  21 May 2008; Markus Ullmann <jokey@gentoo.org>
+  +shorewall-shell-4.0.11.ebuild:
+  Version bump
 
   04 May 2008; Peter Volkov <pva@gentoo.org> shorewall-shell-4.0.10.ebuild:
   Update dependencies, bug #218767, thank Vieri <rentorbuy AT yahoo.com> for
