--- a/media-video/mplayer/ChangeLog
+++ b/media-video/mplayer/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-video/mplayer
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/mplayer/ChangeLog,v 1.575 2008/05/21 14:14:52 fmccor Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/mplayer/ChangeLog,v 1.576 2008/05/21 18:30:08 corsair Exp $
+
+  21 May 2008; Markus Rothe <corsair@gentoo.org>
+  mplayer-1.0_rc2_p26753-r1.ebuild:
+  Stable on ppc; bug #215006
 
   21 May 2008; Ferris McCormick <fmccor@gentoo.org>
   mplayer-1.0_rc2_p26753-r1.ebuild:
