--- a/dev-perl/extutils-depends/ChangeLog
+++ b/dev-perl/extutils-depends/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/extutils-depends
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/extutils-depends/ChangeLog,v 1.27 2008/05/21 17:22:52 nixnut Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/extutils-depends/ChangeLog,v 1.28 2008/05/21 18:44:48 opfer Exp $
+
+  21 May 2008; Christian Faulhammer <opfer@gentoo.org>
+  extutils-depends-0.300.ebuild:
+  stable x86, bug 204386
 
   21 May 2008; nixnut <nixnut@gentoo.org> extutils-depends-0.300.ebuild:
   Stable on ppc wrt bug 204386
