--- a/net-proxy/squid/ChangeLog
+++ b/net-proxy/squid/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-proxy/squid
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-proxy/cvs-repo/gentoo-x86/net-proxy/squid/ChangeLog,v 1.183 2008/05/14 22:02:09 mrness Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-proxy/cvs-repo/gentoo-x86/net-proxy/squid/ChangeLog,v 1.184 2008/05/22 20:53:09 maekke Exp $
+
+  22 May 2008; Markus Meier <maekke@gentoo.org> squid-2.6.19-r1.ebuild:
+  amd64/x86 stable, bug #223029
 
 *squid-3.0.5 (14 May 2008)
 *squid-2.6.20 (14 May 2008)
