--- a/media-fonts/sil-galatia/ChangeLog
+++ b/media-fonts/sil-galatia/ChangeLog
@@ -1,6 +1,6 @@
-# ChangeLog for media-fonts/ttf-sil-galatia
+# ChangeLog for media-fonts/sil-galatia
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-fonts/cvs-repo/gentoo-x86/media-fonts/sil-galatia/ChangeLog,v 1.1 2008/05/19 20:56:53 dirtyepic Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-fonts/cvs-repo/gentoo-x86/media-fonts/sil-galatia/ChangeLog,v 1.2 2008/05/23 14:32:19 swegener Exp $
 
 *sil-galatia-2.01 (19 May 2008)
 
