--- a/dev-perl/File-chmod/ChangeLog
+++ b/dev-perl/File-chmod/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/File-chmod
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/File-chmod/ChangeLog,v 1.5 2008/05/17 15:05:58 nixnut Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/File-chmod/ChangeLog,v 1.6 2008/05/23 15:57:38 drac Exp $
+
+  23 May 2008; Samuli Suominen <drac@gentoo.org> File-chmod-0.32.ebuild:
+  ~amd64 wrt #219723
 
   17 May 2008; nixnut <nixnut@gentoo.org> File-chmod-0.32.ebuild:
   Added ~ppc wrt bug 219723
