--- a/net-nntp/tin/ChangeLog
+++ b/net-nntp/tin/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-nntp/tin
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-nntp/cvs-repo/gentoo-x86/net-nntp/tin/ChangeLog,v 1.18 2008/01/25 21:12:02 grobian Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-nntp/cvs-repo/gentoo-x86/net-nntp/tin/ChangeLog,v 1.19 2008/05/23 17:29:47 corsair Exp $
+
+  23 May 2008; Markus Rothe <corsair@gentoo.org> tin-1.8.3.ebuild:
+  Added ~ppc
 
   25 Jan 2008; Fabian Groffen <grobian@gentoo.org> tin-1.8.3.ebuild:
   Dropped ppc-macos keyword, see you in prefix
