--- a/media-libs/libgphoto2/ChangeLog
+++ b/media-libs/libgphoto2/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/libgphoto2
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/libgphoto2/ChangeLog,v 1.126 2008/05/24 09:44:11 maekke Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/libgphoto2/ChangeLog,v 1.127 2008/05/24 12:01:41 klausman Exp $
+
+  24 May 2008; Tobias Klausmann <klausman@gentoo.org>
+  libgphoto2-2.4.1-r1.ebuild:
+  Stable on alpha, bug #221853
 
 *libgphoto2-2.4.1-r1 (24 May 2008)
 
