--- a/media-gfx/inkscape/ChangeLog
+++ b/media-gfx/inkscape/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-gfx/inkscape
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-gfx/cvs-repo/gentoo-x86/media-gfx/inkscape/ChangeLog,v 1.94 2008/04/06 13:53:05 maekke Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-gfx/cvs-repo/gentoo-x86/media-gfx/inkscape/ChangeLog,v 1.95 2008/05/24 15:03:45 jer Exp $
+
+  24 May 2008; Jeroen Roovers <jer@gentoo.org> inkscape-0.46-r2.ebuild:
+  Stable for HPPA (bug #223443).
 
   06 Apr 2008; Markus Meier <maekke@gentoo.org>
   +files/inkscape-0.46-gcc43.patch, inkscape-0.46-r2.ebuild:
