--- a/sci-visualization/qtiplot/ChangeLog
+++ b/sci-visualization/qtiplot/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sci-visualization/qtiplot
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sci-visualization/cvs-repo/gentoo-x86/sci-visualization/qtiplot/ChangeLog,v 1.25 2008/05/24 09:08:15 grozin Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sci-visualization/cvs-repo/gentoo-x86/sci-visualization/qtiplot/ChangeLog,v 1.26 2008/05/24 17:02:04 grozin Exp $
+
+  25 May 2008; Andrey Grozin <grozin@gentoo.org>
+  files/qtiplot-0.9.6.2-pro.patch:
+  Python files are now installed to /usr/share/qtiplot (bug #223313)
 
   24 May 2008; Andrey Grozin <grozin@gentoo.org> qtiplot-0.9.6.2.ebuild:
   A minor ebuild fix
