--- a/x11-themes/gtk-chtheme/ChangeLog
+++ b/x11-themes/gtk-chtheme/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-themes/gtk-chtheme
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-themes/cvs-repo/gentoo-x86/x11-themes/gtk-chtheme/ChangeLog,v 1.12 2008/03/29 20:50:27 eva Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-themes/cvs-repo/gentoo-x86/x11-themes/gtk-chtheme/ChangeLog,v 1.13 2008/05/25 06:26:36 corsair Exp $
+
+  25 May 2008; Markus Rothe <corsair@gentoo.org>
+  gtk-chtheme-0.3.1-r1.ebuild:
+  Added ~ppc64
 
 *gtk-chtheme-0.3.1-r1 (29 Mar 2008)
 
