--- a/sys-apps/turbotail/ChangeLog
+++ b/sys-apps/turbotail/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-apps/turbotail
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-apps/cvs-repo/gentoo-x86/sys-apps/turbotail/ChangeLog,v 1.8 2008/05/25 20:45:14 jer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-apps/cvs-repo/gentoo-x86/sys-apps/turbotail/ChangeLog,v 1.9 2008/05/25 20:48:52 jer Exp $
+
+  25 May 2008; Jeroen Roovers <jer@gentoo.org> turbotail-0.3.ebuild:
+  Make DEPEND conditional.
 
   25 May 2008; Jeroen Roovers <jer@gentoo.org> turbotail-0.3.ebuild:
   Add DNOTIFY support.
