--- a/dev-python/twisted-conch/ChangeLog
+++ b/dev-python/twisted-conch/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/twisted-conch
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/twisted-conch/ChangeLog,v 1.29 2008/05/13 20:43:37 hawking Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/twisted-conch/ChangeLog,v 1.30 2008/05/26 07:59:28 lordvan Exp $
+
+*twisted-conch-8.1.0 (25 May 2008)
+
+  25 May 2008; Thomas Raschbacher <lordvan@gentoo.org>
+  +twisted-conch-8.1.0.ebuild:
+  Version bump
 
   13 May 2008; Ali Polatel <hawking@gentoo.org> twisted-conch-8.0.0.ebuild:
   Use versionator for twisted dep.
