--- a/x11-libs/qt-assistant/ChangeLog
+++ b/x11-libs/qt-assistant/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for x11-libs/qt-assistant
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/qt-assistant/ChangeLog,v 1.7 2008/05/25 08:27:55 corsair Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/qt-assistant/ChangeLog,v 1.8 2008/05/26 14:15:54 ingmar Exp $
+
+*qt-assistant-4.4.0-r1 (26 May 2008)
+
+  26 May 2008; Ingmar Vanhassel <ingmar@gentoo.org>
+  +qt-assistant-4.4.0-r1.ebuild:
+  Install qt-assistant docs in to the correct dir. Fixes bug 217709, thanks
+  to Bernd Steinhauser <berniyh@exherbo.org>.
 
   25 May 2008; Markus Rothe <corsair@gentoo.org> qt-assistant-4.4.0.ebuild:
   Added ~ppc/~ppc64
