--- a/net-misc/tor/ChangeLog
+++ b/net-misc/tor/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-misc/tor
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/tor/ChangeLog,v 1.115 2008/04/29 20:10:51 opfer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/tor/ChangeLog,v 1.116 2008/05/26 15:56:14 opfer Exp $
+
+  26 May 2008; Christian Faulhammer <opfer@gentoo.org>
+  tor-0.1.2.19-r2.ebuild:
+  stable x86, but 223705
 
 *tor-0.1.2.19-r2 (29 Apr 2008)
 
