--- a/sys-kernel/vanilla-sources/ChangeLog
+++ b/sys-kernel/vanilla-sources/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sys-kernel/vanilla-sources
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/vanilla-sources/ChangeLog,v 1.475 2008/05/27 12:05:40 mpagano Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/vanilla-sources/ChangeLog,v 1.476 2008/05/27 13:09:24 mpagano Exp $
+
+  27 May 2008; Mike Pagano <mpagano@gentoo.org>
+  vanilla-sources-2.6.26_rc4.ebuild:
+  Add back dropped keywords
 
 *vanilla-sources-2.6.26_rc4 (27 May 2008)
 
