--- a/media-libs/portaudio/ChangeLog
+++ b/media-libs/portaudio/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/portaudio
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/portaudio/ChangeLog,v 1.55 2008/05/26 12:54:35 drac Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/portaudio/ChangeLog,v 1.56 2008/05/27 17:25:53 jer Exp $
+
+  27 May 2008; Jeroen Roovers <jer@gentoo.org>
+  portaudio-19_pre20071207.ebuild:
+  Marked ~hppa (bug #223059).
 
   26 May 2008; Samuli Suominen <drac@gentoo.org>
   portaudio-19_pre20071207.ebuild:
