--- a/app-crypt/seahorse/ChangeLog
+++ b/app-crypt/seahorse/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-crypt/seahorse
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-crypt/cvs-repo/gentoo-x86/app-crypt/seahorse/ChangeLog,v 1.98 2008/05/12 04:00:52 jer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-crypt/cvs-repo/gentoo-x86/app-crypt/seahorse/ChangeLog,v 1.99 2008/05/28 22:54:36 eva Exp $
+
+*seahorse-2.22.2 (28 May 2008)
+
+  28 May 2008; Gilles Dartiguelongue <eva@gentoo.org>
+  -seahorse-2.22.0.ebuild, +seahorse-2.22.2.ebuild:
+  New version for GNOME-2.22.2. Bug and build fixes.
 
   12 May 2008; Jeroen Roovers <jer@gentoo.org> seahorse-2.22.1.ebuild:
   Marked ~hppa (bug #218794).
