--- a/sys-power/pm-utils/ChangeLog
+++ b/sys-power/pm-utils/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for sys-power/pm-utils
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-power/cvs-repo/gentoo-x86/sys-power/pm-utils/ChangeLog,v 1.3 2008/05/20 04:43:20 compnerd Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-power/cvs-repo/gentoo-x86/sys-power/pm-utils/ChangeLog,v 1.4 2008/05/29 02:33:56 compnerd Exp $
+
+*pm-utils-1.1.2.1 (29 May 2008)
+
+  29 May 2008; Saleem Abdulrasool <compnerd@gentoo.org>
+  +pm-utils-1.1.2.1.ebuild:
+  Version bump from upstream
 
 *pm-utils-1.1.1 (20 May 2008)
 
