--- a/net-misc/nxclient/ChangeLog
+++ b/net-misc/nxclient/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-misc/nxclient
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/nxclient/ChangeLog,v 1.65 2008/04/09 09:50:19 voyageur Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/nxclient/ChangeLog,v 1.66 2008/05/29 10:29:14 opfer Exp $
+
+  29 May 2008; Christian Faulhammer <opfer@gentoo.org>
+  nxclient-3.2.0.ebuild:
+  x86 stable, bug #222967
 
 *nxclient-3.2.0 (09 Apr 2008)
 
