--- a/media-video/ffmpegthumbnailer/ChangeLog
+++ b/media-video/ffmpegthumbnailer/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-video/ffmpegthumbnailer
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/ffmpegthumbnailer/ChangeLog,v 1.48 2008/05/29 17:19:13 corsair Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/ffmpegthumbnailer/ChangeLog,v 1.49 2008/05/29 19:18:34 armin76 Exp $
+
+  29 May 2008; Raúl Porcel <armin76@gentoo.org>
+  ffmpegthumbnailer-1.2.5.ebuild:
+  alpha/ia64/sparc stable wrt #224079
 
   29 May 2008; Markus Rothe <corsair@gentoo.org>
   ffmpegthumbnailer-1.2.5.ebuild:
