--- a/mail-filter/spamprobe/ChangeLog
+++ b/mail-filter/spamprobe/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for mail-filter/spamprobe
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/mail-filter/cvs-repo/gentoo-x86/mail-filter/spamprobe/ChangeLog,v 1.22 2008/04/28 16:44:38 ticho Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/mail-filter/cvs-repo/gentoo-x86/mail-filter/spamprobe/ChangeLog,v 1.23 2008/05/30 06:58:39 phreak Exp $
+
+  30 May 2008; Christian Heim <phreak@gentoo.org> metadata.xml:
+  Removing Andrej Kacian (Ticho) from metadata.xml (as per #59986).
 
   28 Apr 2008; Andrej Kacian <ticho@gentoo.org>
   +files/spamprobe-1.4b-gcc43.patch, -spamprobe-1.4a.ebuild,
