--- a/media-libs/fontconfig/ChangeLog
+++ b/media-libs/fontconfig/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/fontconfig
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/fontconfig/ChangeLog,v 1.112 2008/05/25 09:15:44 dirtyepic Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/fontconfig/ChangeLog,v 1.113 2008/05/30 18:53:46 aballier Exp $
+
+  30 May 2008; Alexis Ballier <aballier@gentoo.org>
+  fontconfig-2.5.93.ebuild:
+  Readd libtoolize call for fbsd
 
 *fontconfig-2.5.93 (25 May 2008)
 
