--- a/app-text/dvipng/ChangeLog
+++ b/app-text/dvipng/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-text/dvipng
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-text/cvs-repo/gentoo-x86/app-text/dvipng/ChangeLog,v 1.29 2008/05/11 19:01:22 aballier Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-text/cvs-repo/gentoo-x86/app-text/dvipng/ChangeLog,v 1.30 2008/05/30 21:37:36 aballier Exp $
+
+*dvipng-1.11 (30 May 2008)
+
+  30 May 2008; Alexis Ballier <aballier@gentoo.org> -dvipng-1.10.ebuild,
+  +dvipng-1.11.ebuild:
+  version bump
 
 *dvipng-1.10 (11 May 2008)
 
